<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Usuarios"
    android:background="@color/cardview_dark_background"
    android:layout_gravity="center">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/Rojo"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/EIdentificacion"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/Gris"
            android:hint="@string/identificacion"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/ENombres"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/Gris"
            android:hint="@string/NameUser"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/EApellidos"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="no"
            android:background="@color/Gris"
            android:hint="@string/ApellidoUser"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/Eemail"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="no"
            android:background="@color/Gris"
            android:hint="@string/CorreoUsuario"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/ENumero"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="no"
            android:background="@color/Gris"
            android:hint="@string/TelefonoUsuario"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/EAddress"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="no"
            android:background="@color/Gris"
            android:hint="@string/ResidenciaUsuario"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/EPass"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="no"
            android:background="@color/Gris"
            android:hint="@string/ContraseñaUsuario"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/Planes"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:background="@color/Gris"
            android:minHeight="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/teal_700"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.888">

        <Button
            android:id="@+id/Crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:onClick="Crear"
            android:text="@string/BotonRegistrar" />

        <Button
            android:id="@+id/Buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:onClick="Buscar"
            android:text="@string/BotonBuscar" />

        <Button
            android:id="@+id/Actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:onClick="Actualizar"
            android:text="@string/BotonModificar" />

        <Button
            android:id="@+id/Eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:onClick="Eliminar"
            android:text="@string/BotonEliminar" />

    </LinearLayout>





</android.support.constraint.ConstraintLayout>